--- a/mysite/polls/static/polls/style.css
+++ b/mysite/polls/static/polls/style.css
@@ -2,6 +2,6 @@ li a {
     color: green;
 }
 body {
-    background: white url("images/background.gif") no-repeat right bottom;
+    background: white url("images/background.jpeg") no-repeat right bottom;
 }
 
